--- a/.github/workflows/devdeploy.yml
+++ b/.github/workflows/devdeploy.yml
@@ -93,7 +93,7 @@ jobs:
         echo "====== Docker build ========"
         echo ${{ secrets.DOCKER_TOKEN }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin 
         docker build -t ${{needs.check.outputs.appname}} .
-        docker tag ${PREFIX}-${{needs.check.outputs.appname}} ${{ secrets.DOCKER_USERNAME }}/${{needs.check.outputs.appname}}
+        docker tag ${{needs.check.outputs.appname}} ${{ secrets.DOCKER_USERNAME }}/${PREFIX}-${{needs.check.outputs.appname}}
         docker push ${{ secrets.DOCKER_USERNAME }}/${PREFIX}-${{needs.check.outputs.appname}}
         ${SLACK_COMMAND} '{"text":"Push to docker done!"}' ${{secrets.SLACK_WEBHOOK_URL}}
             
