--- a/api/k8s_devdeploy.yml
+++ b/api/k8s_devdeploy.yml
@@ -6,23 +6,23 @@ metadata:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: c3madmin-portal
+  name: c3m-api
   namespace: colis-dev
   labels:
-    app: c3madmin-portal
+    app: c3m-api
 spec:
   replicas: 2 #We always want more than 1 replica for HA test
   selector:
     matchLabels:
-      app: c3madmin-portal
+      app: c3m-api
   template:
     metadata:
       labels:
-        app: c3madmin-portal
+        app: c3m-api
     spec:
       containers:
-        - name: c3madmin-portal #1st container
-          image: tidusant/c3madmin-portal:latest #Dockerhub image
+        - name: c3m-api #1st container
+          image: tidusant/c3m-api:latest #Dockerhub image
           ports:
             - containerPort: 8081 #Exposes the port 8901 of the container
           env:
@@ -46,14 +46,14 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: c3madmin-portal-service
+  name: c3m-api-service
   namespace: colis-dev
 spec:
   type: NodePort
   selector:
-    app: c3madmin-portal
+    app: c3m-api
   ports:
-    - name: c3madmin-portal-port
+    - name: c3m-api-port
       protocol: TCP
       port: 8081
       nodePort: 30081 #must be between 30000 - 32767
