--- a/grpc/ord/k8s_devdeploy.yml
+++ b/grpc/ord/k8s_devdeploy.yml
@@ -27,15 +27,17 @@ spec:
             - containerPort: 8903 #Exposes the port 8901 of the container test
           env:
             - name: CHADMIN_URI
-              valueFrom:
-                secretKeyRef:
-                  name: mysecret
-                  key: devdb_url
+              value: "mongodb://sellpos:sellpos1234%50@mongo/sellpos?retryWrites=true&w=majority"
+#              valueFrom:
+#                secretKeyRef:
+#                  name: mysecret
+#                  key: devdb_url
             - name: CHADMIN_DB
-              valueFrom:
-                secretKeyRef:
-                  name: mysecret
-                  key: devdb_name
+              value: "sellpos"
+#              valueFrom:
+#                secretKeyRef:
+#                  name: mysecret
+#                  key: devdb_name
 
 ---
 kind: Service
