--- a/grpc/ord/k8s_devdeploy.yml
+++ b/grpc/ord/k8s_devdeploy.yml
@@ -24,7 +24,7 @@ spec:
         - name: c3m-grpc-ord #1st container
           image: tidusant/c3m-grpc-ord:latest #Dockerhub image
           ports:
-            - containerPort: 8903 #Exposes the port 8901 of the container test
+            - containerPort: 8903 #Exposes the port 8901 of the container test test
           env:
             - name: CHADMIN_URI
               valueFrom:
