--- a/.github/workflows/devdeploy.yml
+++ b/.github/workflows/devdeploy.yml
@@ -18,7 +18,7 @@ jobs:
       apppath: ${{steps.check.outputs.apppath}}  
       appname: ${{steps.check.outputs.appname}}  
       branch: ${{steps.check.outputs.branch}}
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # Steps represent a sequence of tasks that will be executed as part of the jobtest
     steps:
       - id: check
         name: check is Deploy    
