--- a/api/k8s_devdeploy.yml
+++ b/api/k8s_devdeploy.yml
@@ -42,6 +42,8 @@ spec:
               value: "c3m-grpc-shop-service:8902"
             - name: ORD_IP
               value: "c3m-grpc-ord-service:8903"
+            - name: ORD_IP
+              value: "c3m-grpc-session-service"
               #value: "c3m-grpc-ord-service.colis-dev.svc.cluster.local"
 ---
 kind: Service
