--- a/.github/workflows/devdeploy.yml
+++ b/.github/workflows/devdeploy.yml
@@ -68,7 +68,7 @@ jobs:
         echo ${{needs.check.outputs.appname}}
         cd ${{needs.check.outputs.apppath}}
         go get -v -t -d ./...
-        env SESSION_URI="${{ secrets.DEV_DB_URI }}" SESSION_DB="${{ secrets.DEV_DB_NAME }}" CHADMIN_URI="${{ secrets.DEV_DB_URI }}" CHADMIN_DB="${{ secrets.DEV_DB_NAME }}" go test -v ./...
+        env CHADMIN_URI="${{ secrets.DEV_TEST_DB_URI }}" CHADMIN_DB="${{ secrets.DEV_TEST_DB_NAME }}" go test -v ./...
         ${SLACK_COMMAND} '{"text":"Testing Done!"}' ${{secrets.SLACK_WEBHOOK_URL}}
 
   build:
