--- a/grpc/session/k8s_devdeploy.yml
+++ b/grpc/session/k8s_devdeploy.yml
@@ -11,7 +11,7 @@ metadata:
   labels:
     app: c3m-grpc-session
 spec:
-  replicas: 2 #We always want more than 1 replica for HA
+  replicas: 1 #only 1 session to have session memory consistent
   selector:
     matchLabels:
       app: c3m-grpc-session
