--- a/grpc/shop/k8s_devdeploy.yml
+++ b/grpc/shop/k8s_devdeploy.yml
@@ -11,7 +11,7 @@ metadata:
   labels:
     app: c3m-grpc-shop
 spec:
-  replicas: 2 #We always want more than 1 replica for HA
+  replicas: 2 #We always want more than 1 replica for HA rebuild
   selector:
     matchLabels:
       app: c3m-grpc-shop
