--- a/grpc/auth/k8s_devdeploy.yml
+++ b/grpc/auth/k8s_devdeploy.yml
@@ -11,7 +11,7 @@ metadata:
   labels:
     app: c3m-grpc-auth
 spec:
-  replicas: 2 #We always want more than 1 replica for HA test
+  replicas: 3 #We always want more than 1 replica for HA test rebuild
   selector:
     matchLabels:
       app: c3m-grpc-auth
