DEPLOY lptest k8s api url edit

--- a/lptest/k8s_devdeploy.yml
+++ b/lptest/k8s_devdeploy.yml
@@ -34,9 +34,9 @@ spec:
             - containerPort: 8082 #Exposes the port 8901 of the container
           env:
             - name: API_ADD
-              value: "c3m-api-service:8081"
+              value: "http://c3m-api-service:8081"
             - name: LPMIN_ADD
-              value: "c3m-lpmin-service:8090"
+              value: "http://c3mweb-lpmin-service:8090"
 ---
 kind: Service
 apiVersion: v1
