--- a/grpc/lptpl/k8s_devdeploy.yml
+++ b/grpc/lptpl/k8s_devdeploy.yml
@@ -20,6 +20,23 @@ spec:
   hostPath:
     path: "/data/c3m/lptemplates"
 ---
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: c3m-cdn-pv
+  labels:
+    type: local
+  annotations:
+    pv.beta.kubernetes.io/gid: "1001"
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 3Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/data/c3m/cdn"
+---
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -32,7 +49,19 @@ spec:
   resources:
     requests:
       storage: 3Gi
-
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: c3m-cdn-pvc
+  namespace: colis-dev
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 30Gi
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -57,6 +86,8 @@ spec:
           volumeMounts:
           - mountPath: /app/templates
             name: template-volume
+          - mountPath: /app/cdn
+            name: cdn-volume
           ports:
             - containerPort: 8905 #Exposes the port 8901 of the container
           env:
@@ -74,6 +105,9 @@ spec:
       - name: template-volume
         persistentVolumeClaim:
           claimName: c3m-grpc-lptpl-pvc
+      - name: cdn-volume
+        persistentVolumeClaim:
+          claimName: c3m-cdn-pvc
 ---
 kind: Service
 apiVersion: v1
