--- a/wapi/k8s_devdeploy.yml
+++ b/wapi/k8s_devdeploy.yml
@@ -42,12 +42,8 @@ spec:
               value: "c3m-grpc-shop-service:8902"
             - name: ORD_IP
               value: "c3m-grpc-ord-service:8903"
-            - name: PAGE_IP
-              value: "c3m-grpc-page-service:8904"
-            - name: LPTPL_IP
-              value: "c3m-grpc-lptpl-service:8905"
-            - name: LP_IP
-              value: "c3m-grpc-lp-service:8906"
+            - name: LPL_IP
+                value: "c3m-grpc-lplead-service:8907"
             - name: SESSION_IP
               value: "c3m-grpc-wsession-service:8865"
               #value: "c3m-grpc-ord-service.colis-dev.svc.cluster.local"
