--- a/api/k8s_devdeploy.yml
+++ b/api/k8s_devdeploy.yml
@@ -140,6 +140,8 @@ spec:
               value: "c3m-grpc-lp-service:8906"
             - name: SESSION_IP
               value: "c3m-grpc-session-service:8864"
+            - name: LPL
+              value: "c3m-grpc-lplead-service:8907"
               #value: "c3m-grpc-ord-service.colis-dev.svc.cluster.local"
 ---
 kind: Service
