--- a/api/k8s_devdeploy.yml
+++ b/api/k8s_devdeploy.yml
@@ -140,7 +140,7 @@ spec:
               value: "c3m-grpc-lp-service:8906"
             - name: SESSION_IP
               value: "c3m-grpc-session-service:8864"
-            - name: LPL
+            - name: LPL_IP
               value: "c3m-grpc-lplead-service:8907"
               #value: "c3m-grpc-ord-service.colis-dev.svc.cluster.local"
 ---
