--- a/grpc/auth/k8s_devdeploy.yml
+++ b/grpc/auth/k8s_devdeploy.yml
@@ -44,11 +44,11 @@ metadata:
   name: c3m-grpc-auth-service
   namespace: colis-dev
 spec:
-  type: NodePort
+  #type: NodePort
   selector:
     app: c3m-grpc-auth
   ports:
-    - name: c3m-grpc-auth-port
+    - name: grpc
       protocol: TCP
       port: 8901
-      nodePort: 30901 #must be between 30000 - 32767
+      #nodePort: 30901 #must be between 30000 - 32767
