--- a/grpc/lplead/k8s_devdeploy.yml
+++ b/grpc/lplead/k8s_devdeploy.yml
@@ -58,11 +58,11 @@ metadata:
   name: c3m-grpc-lplead-service
   namespace: colis-dev
 spec:
-  type: NodePort
+  #type: NodePort
   selector:
     app: c3m-grpc-lplead
   ports:
-    - name: c3m-grpc-lplead-port
+    - name: grpc
       protocol: TCP
       port: 8907
-      nodePort: 30907 #must be between 30000 - 32767
+      #nodePort: 30907 #must be between 30000 - 32767
