DEPLOY grpc/session istio install

--- a/grpc/session/k8s_devdeploy.yml
+++ b/grpc/session/k8s_devdeploy.yml
@@ -44,11 +44,11 @@ metadata:
   name: c3m-grpc-session-service
   namespace: colis-dev
 spec:
-  type: NodePort
+  #type: NodePort
   selector:
     app: c3m-grpc-session
   ports:
-    - name: c3m-grpc-session-port
+    - name: grpc
       protocol: TCP
       port: 8864
-      nodePort: 30864 #must be between 30000 - 32767
+      #nodePort: 30864 #must be between 30000 - 32767
